card with fix on small screen.

--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ body{
 }
 
 .project-card .card{
-    width: 20rem;
+    /* width: 20rem; */
 }
 
 .card-body p{
